ISPN-13839 Rework default server templates
* Remove all existing templates
* Introduce templates for RESP caches